--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
     </head>
 
     <body id="container">
-        Mine<br>
+        <span id="logo">Mine</span><br>
         A Web Presence Journal
         April
 
