--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
 
     <body id="container">
         <span id="logo">Mine</span><br>
-        A Web Presence Journal
+        A Web Presence Journal<br>
         April
 
 	
