--- a/index.html
+++ b/index.html
@@ -13,8 +13,10 @@
 
     <body id="container">
         <span id="logo">Mine</span><br>
-        A Web Presence Journal<br>
-        April
+        <span id="slogan">A Web Presence Journal</span><br>
+        <span id="month">April 2019</span>
+
+        <h2>this month</h2>
 
 	
     </body><!-- END OF CONTAINER -->
