--- a/index.html
+++ b/index.html
@@ -1,4 +1,4 @@
-<!DOCTYPE html>
+<!doctype html>
 
 <html lang="en">
 
@@ -6,8 +6,9 @@
         <meta"charset="UTF-8"/>
         <title>Mine April edition</title>
         <meta name="author" content="Lyle Strain">
-        <meta name="viewport" content="width=device-width">
+        <meta name="viewport" content="width=device-width, initial-scale=1.0">
         <meta name="description" content="">
+        <meta name="keywords" content="">
         <link rel="stylesheet" href="css/styles.css">
     </head>
 
