--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
 
     <head>
         <meta"charset="UTF-8"/>
-        <title>Mine April edition</title>
+        <title>Mine April2020 edition</title>
         <meta name="author" content="Lyle Strain">
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
         <meta name="description" content="">
