--- a/index.html
+++ b/index.html
@@ -6,9 +6,9 @@
         <meta"charset="UTF-8"/>
         <title>Mine April2020 edition</title>
         <meta name="author" content="Lyle Strain">
-        <meta name="viewport" content="width=device-width, initial-scale=1.0">
-        <meta name="description" content="">
+        <meta name="description" content="My Web Development/Presence Journal">
         <meta name="keywords" content="">
+        <meta name="viewport" content="width=device-width, initial-scale=1.0">
         <link rel="stylesheet" href="css/styles.css">
     </head>
 
